feature: integrate Flyway for database migrations and update OAuth2 client repository configuration